--- a/scss/style.scss
+++ b/scss/style.scss
@@ -705,9 +705,8 @@ ul.pagination{ margin: 10px 0 !important; }
     }
 }
 .news__cards-wrapper{
-    max-width: 100%;
-    overflow: unset !important;
-    overflow-x: auto;
+    max-width: 100% !important;
+    overflow-x: auto !important;
     &::-webkit-scrollbar{ width: 3px; }
     &::-webkit-scrollbar-thumb{ background-color: #FED105; }
 }
